# novel-translate

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  start.bat  stop.bat  turbo.json
backend/: alembic.ini  pyproject.toml
backend/src/novel_translate/: __init__.py
backend/src/novel_translate/api/: deps.py  main.py
backend/src/novel_translate/api/v1/: chapters.py  glossary.py  projects.py  segments.py
backend/src/novel_translate/core/: config.py  db.py  redis.py
backend/src/novel_translate/db/: __init__.py  base.py
backend/src/novel_translate/db/migrations/: env.py
backend/src/novel_translate/modules/exports/: __init__.py  chapter.py
backend/src/novel_translate/modules/glossary/: models.py  schemas.py  service.py
backend/src/novel_translate/modules/ingest/: __init__.py  segment.py  txt.py
backend/src/novel_translate/modules/memory/: models.py  retrieval.py  snapshot.py
backend/src/novel_translate/modules/projects/: __init__.py  models.py  schemas.py  service.py
backend/src/novel_translate/modules/providers/: anthropic.py  base.py  openai_compatible.py  registry.py
backend/src/novel_translate/modules/translation/: __init__.py  prompt.py  (+3 more)
backend/src/novel_translate/worker/: main.py  ratelimit.py
backend/tests/: conftest.py  test_export.py  test_glossary.py  test_health.py  test_ingest.py  test_knowledge_layer.py  test_openai_compatible.py  test_projects.py  test_ratelimit.py  test_segment.py  test_translate_endpoint.py  test_translate_request.py  test_translate_segment_task.py
(+25 files in other folders)
